<resources>
    <string name="app_name">Mag It</string>
    <string name="txt_login">Log in</string>
    <string name="hint_email">Email</string>
    <string name="password_error">password have to 6 character</string>
    <string name="hint_password">Password</string>
    <string name="signupnow">not an account? sign up now</string>
    <string name="btnlogin">Login</string>
    <string name="continuee">or continue with</string>
    <string name="iv_google">image google</string>
    <string name="hint_name">name</string>
    <string name="btnsignup">sign up</string>
    <string name="insert">Insert your picture</string>
    <string name="btn_galeri">Galeri</string>
    <string name="btn_kamera">kamera</string>
    <string name="i_setting">setting</string>
    <string name="tv_description">Convert text to speech</string>
    <string name="name_app">Mag It</string>
    <string name="btn_download">download</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="mag_it_logo_desc">Mag-it Logo</string>
    <string name="txt_signup">Sign up</string>
    <string name="i_home">home</string>
    <string name="i_scan">scan</string>
    <string name="i_profile">profile</string>
    <string name="emailError">Email format invalid</string>
    <string name="message_validation">Enter your  %1$s</string>
    <string name="signup_error">Register Failed</string>
    <string name="success_signup">Signup Success</string>
    <string name="failedRetrofit">failed signup</string>
    <string name="et_filllogin">FiIl all blank</string>
    <string name="loginnow">have an account? log in now</string>
    <string name="btn_logout">log out</string>
    <string name="tv_name">Name</string>
    <string name="tv_email">Email</string>
    <string name="profile">Profile</string>
    <string name="btn_convert">convert</string>
</resources>