<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_app"
        android:textColor="@color/blue_700"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/iv_setting"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_description"
        android:textColor="@color/blue_700"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/iv_paste"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_paste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <ImageView
        android:id="@+id/iv_increase"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_increase"
        app:layout_constraintStart_toEndOf="@+id/iv_paste"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <ImageView
        android:id="@+id/iv_decrease"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_decrease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/iv_increase"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <EditText
        android:id="@+id/et_inputtext"
        android:layout_width="334dp"
        android:layout_height="287dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_insert_image"
        android:gravity="top|left"
        android:padding="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name_app"
        android:background="@drawable/bg_btn_addfile"
        android:textColor="@color/blue_200"
        app:layout_constraintStart_toStartOf="@+id/et_inputtext"
        app:layout_constraintTop_toBottomOf="@+id/et_inputtext" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_addfile"
        android:text="@string/btn_download"
        android:textColor="@color/blue_200"
        app:layout_constraintEnd_toEndOf="@+id/et_inputtext"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/et_inputtext" />


</androidx.constraintlayout.widget.ConstraintLayout>